--- a/FrontEnd/src/app/property/add-properties/add-properties.component.html
+++ b/FrontEnd/src/app/property/add-properties/add-properties.component.html
@@ -62,7 +62,7 @@
                         <div class="form-group col-12" style="padding-top: 5px;">
                           <!-- <button type="submit" class="btn btn-primary m-3">Save</button>
                           <button type="reset" class="btn btn-primary">Cancel</button> -->
-                          <button type="button" class="btn btn-primary btn-block" (click)="selectTab(1)" style="margin-left: 255px;width: 30%;">Next</button>
+                          <button type="button" class="btn btn-primary btn-block" (click)="selectTab(1)">Next</button>
                         </div>
                     </tab>
                     <tab heading="Pricing And Area">
@@ -87,10 +87,10 @@
                             <input type="text" class="form-control" ngModel name="Carpet" >
                         </div>
                         <div class="form-group col-12" style="padding-top: 5px;">
-                           <button type="button" class="btn btn-primary btn-block" (click)="selectTab(2)" style="margin-left: 255px;width: 30%;">Next</button>
+                           <button type="button" class="btn btn-primary btn-block" (click)="selectTab(2)" >Next</button>
                         </div>
                         <div class="form-group col-12" style="padding-top: 5px;">
-                            <button type="button" class="btn btn-primary btn-block" (click)="selectTab(0)" style="margin-left: 255px;width: 30%;">Back</button>
+                            <button type="button" class="btn btn-primary btn-block" (click)="selectTab(0)" >Back</button>
                          </div>
                     </tab>
                     <tab heading="Address">
@@ -111,10 +111,10 @@
                             <input type="text" class="form-control" >
                         </div>
                         <div class="form-group col-12" style="padding-top: 5px;">
-                            <button type="button" class="btn btn-primary btn-block" (click)="selectTab(3)" style="margin-left: 255px;width: 30%;">Next</button>
+                            <button type="button" class="btn btn-primary btn-block" (click)="selectTab(3)">Next</button>
                         </div>
                         <div class="form-group col-12" style="padding-top: 5px;">
-                            <button type="button" class="btn btn-primary btn-block" (click)="selectTab(1)" style="margin-left: 255px;width: 30%;">Back</button>
+                            <button type="button" class="btn btn-primary btn-block" (click)="selectTab(1)" >Back</button>
                          </div>
                     </tab>
                     <tab heading="Other Details">
@@ -147,10 +147,10 @@
                             <textarea type="text" rows="5" class="form-control" ngModel name="Description"></textarea>
                         </div>
                         <div class="form-group col-12" style="padding-top: 5px;">
-                            <button type="button" class="btn btn-primary btn-block" (click)="selectTab(4)" style="margin-left: 255px;width: 30%;">Next</button>
+                            <button type="button" class="btn btn-primary btn-block" (click)="selectTab(4)" >Next</button>
                         </div>
                         <div class="form-group col-12" style="padding-top: 5px;">
-                            <button type="button" class="btn btn-primary btn-block" (click)="selectTab(2)" style="margin-left: 255px;width: 30%;">Back</button>
+                            <button type="button" class="btn btn-primary btn-block" (click)="selectTab(2)">Back</button>
                          </div>
                     </tab>
                     <tab heading="Photos">
@@ -161,7 +161,7 @@
                             </div>
                         </div>
                         <div class="form-group col-12" style="padding-top: 5px;">
-                            <button type="button" class="btn btn-primary btn-block" (click)="selectTab(3)" style="margin-left: 255px;width: 30%;">Back</button>
+                            <button type="button" class="btn btn-primary btn-block" (click)="selectTab(3)">Back</button>
                             <button type="submit" class="btn btn-primary btn-block" style="margin-left: 10px;">Save</button>
                             <button type="submit" class="btn btn-primary btn-block" style="margin-left:10px;">Cancel</button>
                          </div>
